Home Page's main-bar overflow bug fix

--- a/css/screen.css
+++ b/css/screen.css
@@ -339,6 +339,7 @@ img.bounded {
 
 .regular_x3_5 {
   font-size: 3.5em;
+  line-height:1.1em;
 }
 
 .gynormous2x {
